infrastructure/apps/media-server/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
          - containerPort: 8096
        volumeMounts:
        - name: config-storage
          mountPath: /config
        - name: media-storage
          mountPath: /media
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: media-storage
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
